--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,8 @@
         "express":"2.5.6",
         "ejs": "0.6.1",
         "connect":"1.8.5",
-        "coffee-script":"1.2.0"
+        "coffee-script":"1.2.0",
+        "asynct":"1.0.2"
    },
   "devDependencies": {},
   "optionalDependencies": {}
