--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,7 @@
         "ejs": "0.6.1",
         "connect":"1.8.5",
         "coffee-script":"1.2.0",
-        "asynct":"1.0.2"
+        "should":"0.5.1"
    },
   "devDependencies": {},
   "optionalDependencies": {}
