--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
         "ejs": "0.6.1",
         "connect":"1.8.5",
         "coffee-script":"1.2.0",
-        "should":"0.5.1"
+        "should":"0.5.1",
+        "mongodb-wrapper":"0.2.7"
    },
   "devDependencies": {},
   "optionalDependencies": {}
